ffmpeg_opt: store canvas size in decoder context

Fixes canvas size
Fixes Ticket4074

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 66b9e60af0b82ee8bd63d84011127dca4ea1e23f)